--- a/style.css
+++ b/style.css
@@ -17,6 +17,153 @@
   overflow-x: hidden;
 }
 
+.container .comment_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: white;
+  width: 49.5vw;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px 0px;
+}
+
+.container .comment_container .like_section {
+  margin-right: 20px;
+}
+
+.container .comment_container .like_section_container {
+  border-radius: 8px;
+  background-color: #f5f6fa;
+  padding: 5px 13px 5px 13px;
+}
+
+.container .comment_container .like_section_container .increase_like_button,
+.container .comment_container .like_section_container .decrease_like_button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container .comment_container .like_section_container .increase_like_button button {
+  color: #c3c4ef;
+  background-color: #f5f6fa;
+  border: none;
+  padding: 10px 0px;
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
+}
+
+.container .comment_container .like_section_container .increase_like_button button:hover {
+  cursor: pointer;
+  color: #5457b6;
+}
+
+.container .comment_container .like_section_container .like_count {
+  font-weight: 500;
+  background-color: #f5f6fa;
+  color: #5457b6;
+}
+
+.container .comment_container .like_section_container .decrease_like_button button {
+  background-color: #f5f6fa;
+  color: #c3c4ef;
+  border: none;
+  -webkit-transition: 0.15px;
+  transition: 0.15px;
+  padding-top: 10px;
+}
+
+.container .comment_container .like_section_container .decrease_like_button button:hover {
+  cursor: pointer;
+  color: #5457b6;
+}
+
+.container .comment_container .comment_details {
+  -webkit-box-flex: 7;
+      -ms-flex: 7;
+          flex: 7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.container .comment_container .comment_details .comment_header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .comment_container .comment_details .comment_header_left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .comment_container .comment_details .comment_header_left .user_image img {
+  width: 2vw;
+}
+
+.container .comment_container .comment_details .comment_header_left .user_name p {
+  padding: 10px;
+  font-weight: 700;
+  color: #324152;
+  margin-left: 0.7vw;
+}
+
+.container .comment_container .comment_details .comment_header_left .time {
+  color: #67727e;
+  margin-left: 0.5vw;
+}
+
+.container .comment_container .comment_details .comment_header_right .reply_button button {
+  border: none;
+  background-color: white;
+  color: #5457b6;
+  font-weight: 700;
+  font-size: 16px;
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
+  margin-left: 3vw;
+}
+
+.container .comment_container .comment_details .comment_header_right .reply_button button:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+.container .comment_container .comment_details .comment {
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
+}
+
+.container .comment_container .comment_details .comment p {
+  line-height: 1.5vw;
+  padding: 8px 6px;
+  font-weight: 400;
+  color: #67727e;
+}
+
 .container .add_reply_container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -69,8 +216,8 @@
   border-radius: 9px;
   border: none;
   margin-bottom: 57px;
-  -webkit-transition: .15s;
-  transition: .15s;
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
 }
 
 .container .add_reply_container .reply_button button:hover {
@@ -80,153 +227,6 @@
 
 .container .hidden_reply {
   display: none;
-}
-
-.container .comment_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: white;
-  width: 49.5vw;
-  border-radius: 10px;
-  padding: 20px;
-  margin: 20px 0px;
-}
-
-.container .comment_container .like_section {
-  margin-right: 20px;
-}
-
-.container .comment_container .like_section_container {
-  border-radius: 8px;
-  background-color: #f5f6fa;
-  padding: 5px 13px 5px 13px;
-}
-
-.container .comment_container .like_section_container .increase_like_button, .container .comment_container .like_section_container .decrease_like_button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.container .comment_container .like_section_container .increase_like_button button {
-  color: #c3c4ef;
-  background-color: #f5f6fa;
-  border: none;
-  padding: 10px 0px;
-  -webkit-transition: 0.15s;
-  transition: 0.15s;
-}
-
-.container .comment_container .like_section_container .increase_like_button button:hover {
-  cursor: pointer;
-  color: #5457b6;
-}
-
-.container .comment_container .like_section_container .like_count {
-  font-weight: 500;
-  background-color: #f5f6fa;
-  color: #5457b6;
-}
-
-.container .comment_container .like_section_container .decrease_like_button button {
-  background-color: #f5f6fa;
-  color: #c3c4ef;
-  border: none;
-  -webkit-transition: 0.15px;
-  transition: 0.15px;
-  padding-top: 20px;
-}
-
-.container .comment_container .like_section_container .decrease_like_button button:hover {
-  cursor: pointer;
-  color: #5457b6;
-}
-
-.container .comment_container .comment_details {
-  -webkit-box-flex: 7;
-      -ms-flex: 7;
-          flex: 7;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.container .comment_container .comment_details .comment_header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container .comment_container .comment_details .comment_header_left {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container .comment_container .comment_details .comment_header_left .user_image img {
-  width: 2vw;
-}
-
-.container .comment_container .comment_details .comment_header_left .user_name p {
-  padding: 10px;
-  font-weight: 700;
-  color: #324152;
-  text-transform: capitalize;
-  margin-left: 0.7vw;
-}
-
-.container .comment_container .comment_details .comment_header_left .time {
-  color: #67727e;
-  margin-left: 0.5vw;
-}
-
-.container .comment_container .comment_details .comment_header_right .reply_button button {
-  border: none;
-  background-color: white;
-  color: #5457b6;
-  font-weight: 700;
-  font-size: 16px;
-  -webkit-transition: 0.15s;
-  transition: 0.15s;
-  margin-left: 3vw;
-}
-
-.container .comment_container .comment_details .comment_header_right .reply_button button:hover {
-  cursor: pointer;
-  opacity: 0.6;
-}
-
-.container .comment_container .comment_details .comment {
-  -webkit-box-flex: 4;
-      -ms-flex: 4;
-          flex: 4;
-}
-
-.container .comment_container .comment_details .comment p {
-  line-height: 1.5vw;
-  padding: 8px 6px;
-  font-weight: 400;
-  color: #67727e;
 }
 
 .container .reply_main_container {
@@ -258,7 +258,8 @@
   padding: 5px 13px 5px 13px;
 }
 
-.container .reply_main_container .reply_section .like_section_container .increase_like_button, .container .reply_main_container .reply_section .like_section_container .decrease_like_button {
+.container .reply_main_container .reply_section .like_section_container .increase_like_button,
+.container .reply_main_container .reply_section .like_section_container .decrease_like_button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -293,7 +294,7 @@
   border: none;
   -webkit-transition: 0.15px;
   transition: 0.15px;
-  padding-top: 20px;
+  padding-top: 10px;
 }
 
 .container .reply_main_container .reply_section .like_section_container .decrease_like_button button:hover {
@@ -430,8 +431,8 @@
   padding: 15px;
   border-radius: 9px;
   border: none;
-  -webkit-transition: .15s;
-  transition: .15s;
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
 }
 
 .container .reply_main_container .reply_section .reply_details .reply_message_edit .update_button button:hover {
@@ -439,7 +440,8 @@
   opacity: 0.6;
 }
 
-.container .reply_main_container .reply_section .reply_details .hidden_reply_message, .container .reply_main_container .reply_section .reply_details .hidden_reply_message_edit {
+.container .reply_main_container .reply_section .reply_details .hidden_reply_message,
+.container .reply_main_container .reply_section .reply_details .hidden_reply_message_edit {
   display: none;
 }
 
@@ -577,5 +579,263 @@
 .container .hidden {
   visibility: hidden;
   opacity: 0;
+}
+
+.delete_modal {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #00000021;
+}
+
+.delete_modal .delete_comment {
+  background-color: white;
+  width: 35%;
+  position: absolute;
+  top: 30%;
+  right: 29%;
+}
+
+.delete_modal .delete_comment .delete_text .delete_title {
+  font-size: 16px;
+  font-weight: 700;
+  padding: 15px;
+}
+
+.delete_modal .delete_comment .delete_text .make_sure_text {
+  color: #67727e;
+  line-height: 25px;
+  padding: 15px;
+}
+
+.delete_modal .delete_comment .button_for_delete {
+  padding: 15px;
+}
+
+.delete_modal .delete_comment .button_for_delete .dont_delete_button {
+  background-color: #67727e;
+  color: white;
+  padding: 12px 20px;
+  margin: 10px;
+  border-radius: 6px;
+  border: none;
+}
+
+.delete_modal .delete_comment .button_for_delete .sure_delete_button {
+  background-color: #ed6468;
+  color: white;
+  padding: 12px 20px;
+  margin: 10px;
+  border-radius: 6px;
+  border: none;
+}
+
+.hidden_modal {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .container {
+    padding: 0 9px;
+  }
+  .container .comment_container {
+    padding: 10px 24px;
+    margin: 6px 0px;
+    width: 90%;
+    position: relative;
+  }
+  .container .comment_container .like_section {
+    margin-right: 0px;
+  }
+  .container .comment_container .like_section_container {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    bottom: 8px;
+    left: 10px;
+  }
+  .container .comment_container .like_section_container .increase_like_button button {
+    font-size: 12px;
+    padding: 0px 0px;
+  }
+  .container .comment_container .like_section_container .like_count {
+    font-size: 15px;
+    padding: 0px 12px;
+  }
+  .container .comment_container .like_section_container .decrease_like_button button {
+    font-size: 14px;
+    padding-top: 3px;
+    margin-bottom: 6px;
+  }
+  .container .comment_container .comment_details .comment_header_left .user_image img {
+    width: 8vw;
+  }
+  .container .comment_container .comment_details .comment_header_right .reply_button button {
+    position: absolute;
+    right: 24px;
+    bottom: 12px;
+    font-size: 14px;
+    margin-left: 0px;
+    background: none;
+  }
+  .container .comment_container .comment_details .comment p {
+    line-height: 18px;
+    margin-bottom: 30px;
+  }
+  .container .add_reply_container {
+    height: 15vh;
+    width: 89%;
+    position: relative;
+  }
+  .container .add_reply_container .image_container {
+    position: absolute;
+    bottom: 4%;
+  }
+  .container .add_reply_container .image_container img {
+    width: 8vw;
+    margin-bottom: 0px;
+  }
+  .container .add_reply_container .add_reply_box {
+    width: 92%;
+    margin: 0px;
+  }
+  .container .add_reply_container .add_reply_box_textarea {
+    width: 100%;
+    border-radius: 8px;
+  }
+  .container .add_reply_container .reply_button {
+    margin-left: 4px;
+    margin-top: 4px;
+    position: absolute;
+    bottom: 6%;
+    right: 5%;
+  }
+  .container .add_reply_container .reply_button button {
+    font-size: 12px;
+    padding: 5px 7px;
+    border-radius: 5px;
+    margin-bottom: 0px;
+  }
+  .container .reply_main_container {
+    margin-left: 0px;
+    margin-right: 5px;
+    position: relative;
+  }
+  .container .reply_main_container .reply_section {
+    margin-left: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px;
+  }
+  .container .reply_main_container .reply_section .like_section {
+    margin-right: 0px;
+  }
+  .container .reply_main_container .reply_section .like_section_container {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    bottom: 8px;
+    left: 24px;
+  }
+  .container .reply_main_container .reply_section .like_section_container .increase_like_button button {
+    padding: 0px 0px;
+    font-size: 12px;
+  }
+  .container .reply_main_container .reply_section .like_section_container .like_count {
+    font-size: 15px;
+    padding: 0px 12px;
+  }
+  .container .reply_main_container .reply_section .like_section_container .decrease_like_button button {
+    font-size: 14px;
+    padding-top: 3px;
+    margin-bottom: 6px;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_header_left .user_image img {
+    width: 8vw;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_header_left .time {
+    padding-left: 12px;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_header_right {
+    position: absolute;
+    bottom: 12px;
+    right: 15px;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_header_right .delete_button {
+    font-size: 14px;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_header_right .edit_button {
+    font-size: 14px;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_message {
+    -webkit-box-flex: 4;
+        -ms-flex: 4;
+            flex: 4;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_message p {
+    line-height: 18px;
+    margin-bottom: 30px;
+  }
+  .container .reply_main_container .reply_section .reply_details .reply_message_edit .update_button button {
+    position: absolute;
+    padding: 7px;
+    font-size: 12px;
+  }
+  .container .reply_main_container .reply_section .reply_details .hidden_reply_message,
+  .container .reply_main_container .reply_section .reply_details .hidden_reply_message_edit {
+    display: none;
+  }
+  .container .footer {
+    bottom: 3%;
+  }
+  .container .footer button {
+    font-size: 13px;
+    padding: 12px 16px;
+  }
+  .container .footer button:hover {
+    cursor: pointer;
+    opacity: 0.6;
+  }
+  .container .form_container {
+    width: 100%;
+    height: 95vh;
+    top: 0%;
+  }
+  .container .form_container .cancel_button .form_close_button:hover {
+    cursor: pointer;
+  }
+  .container .form_container .form {
+    padding: 0px;
+  }
+  .container .form_container .form div {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .container .form_container .form button {
+    width: 22%;
+  }
+  .delete_modal .delete_comment {
+    width: 80%;
+    top: 25%;
+    right: 8%;
+  }
+  .delete_modal .delete_comment .button_for_delete .dont_delete_button {
+    margin: 0px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
